# brc-analytics

./: .dockerignore  .env  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  README.md  cc-brc-analytics.dev.clevercanary.com-build.sh  demo-sso.sh  docker-compose.auth.yml  docker-compose.yml  eslint.config.mjs  instrumentation-client.ts  jest.config.js  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  playwright.api.config.ts  playwright.config.ts  playwright.ga2.config.ts  psu-brc-analytics.org-build.sh  pyproject.toml  tsconfig.json  vega-embed.d.ts
backend/: .env.example  Dockerfile  README.md  docker-build.sh  docker-compose.yml  nginx.conf  pyproject.toml
backend/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  ruff.toml
backend/api/app/: __init__.py  main.py
backend/api/app/api/v1/: assistant.py  auth.py  cache.py  ena.py  favorites.py  links.py  llm.py  ncbi_links.py  saved_analyses.py  user.py  version.py  workflow_runs.py
backend/api/app/core/: cache.py  config.py  dependencies.py  rate_limit.py  session_signing.py
backend/api/app/db/: __init__.py  crud.py  models.py  session.py
backend/api/app/db/migrations/: env.py
backend/api/app/models/: assistant.py  llm.py  user_data.py  workflow_runs.py
backend/api/app/services/: assistant_agent.py  auth_service.py  catalog_data.py  ena_service.py  links_service.py  llm_service.py  mcp_server.py  ncbi_links_service.py  sambanova_patch.py  session_service.py  sra_mirror.py  workflow_catalog.py
backend/api/app/services/tools/: catalog_data.py  catalog_query.py  catalog_tools.py  sra_tools.py
backend/api/evals/: .gitignore  README.md  evaluators.py  judge.py  model_registry.py  models.yaml.sample  report.py  run_evals.py  specs.py  tasks.py
backend/api/evals/datasets/: assistant_multiturn.py  catalog_query.py  search_interpretation.py  sra_assistant_multiturn.py  sra_tool_selection.py  structured_channel.py  tool_selection.py  workflow_recommendation.py
backend/api/evals/results/: 2026-05-01-assistant-tweaks.md  2026-05-01-baseline-4models.md  2026-05-01-fixes-smoke.md  2026-05-01-opus-4-7.md  2026-05-01-search_interpretation-d26035f1.md  2026-05-01-sonnet-4-6-actual.md  2026-05-01-workflow-rec-fixed.md  2026-05-23-sra_assistant_multiturn-tool_selection-092b3024.md  2026-05-23-sra_tool_selection-092b3024.md  2026-05-23-tool_selection-4cdca710.md  2026-05-24-sra_tool_selection-44bc64e2.md  2026-05-24-sra_tool_selection-8931d286.md  2026-05-24-sra_tool_selection-d15cd681.md
backend/api/evals/tests/: test_cache.py  test_evaluators.py  test_judge.py  test_model_registry.py  test_report.py  test_run_evals.py  test_sra_dataset_guard.py  test_structured_channel.py
backend/api/tests/: test_assistant_agent.py  test_assistant_endpoints.py  test_catalog_data.py  test_catalog_query.py  test_config.py  test_db_persistence.py  test_dependencies.py  test_links.py  test_mcp.py  test_mcp_catalog_scope.py  test_ncbi_links.py  test_rate_limit.py  test_sentry_startup.py  test_session_service.py  test_session_signing.py  test_sra_mirror.py  test_user_persistence_api.py  test_workflow_runs_api.py
backend/app/: main.py
backend/app/api/v1/: galaxy.py  health.py
backend/app/core/: config.py
backend/app/models/: __init__.py  galaxy.py  llm.py
backend/app/services/: galaxy_service.py
backend/galaxy/: oidc_backends_config.xml  oidc_config.xml  seed-test-user.sh
backend/keycloak/: Dockerfile  init-galaxy-scope.sh  realm-export.json
backend/tests/: conftest.py  test_catalog_data.py  test_confidence_scoring.py  test_invalid_query_detection.py  test_llm_service.py  test_mcp_server.py
catalog/py_package/: README.md  pyproject.toml
catalog/py_package/catalog_build/: __init__.py  build.py  iwc_manifest_to_workflows_yaml.py  load_taxonomy.py  qc_utils.py  utils.py
catalog/py_package/catalog_build/dbt/: dbt_project.yml  profiles.yml
catalog/py_package/catalog_build/dbt/models/: catalog_taxa.sql  organism_taxonomy.sql
catalog/py_package/catalog_build/generated_schema/: schema.py
catalog/py_package/catalog_build/load/: catalog_source.py  load.py  ncbi_taxonomy.py
catalog/py_package/catalog_build/schema/: assemblies.yaml  organisms.yaml  outbreaks.yaml  pangenomes.yaml  schema.yaml  workflow_categories.yaml  workflows.yaml
catalog/py_package/catalog_build/schema/enums/: collection_type.yaml  (+11 more)
catalog/py_package/catalog_build/schema_utils/: gen_schema.py  gen_typescript.py  validate_catalog.py
catalog/py_package/catalog_build/transform/: transform.py
(+1308 files in other folders)
