[project]
name = "brc-analytics-backend"
version = "0.1.0"
description = "FastAPI backend infrastructure for BRC Analytics"
authors = [
    {name = "BRC Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bioblend>=1.4.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "uvicorn>=0.35.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.13.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

