[project]
name = "brc-analytics-backend"
version = "0.1.0"
description = "FastAPI backend infrastructure for BRC Analytics"
authors = [
    {name = "BRC Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "duckdb>=1.5.0",
    "fastapi>=0.116.1",
    "fastmcp>=3.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-ai==1.68.0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "tenacity>=8.2.0",
    "pyjwt>=2.9.0",
    "sentry-sdk[fastapi]==2.55.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.13.0",
    "pydantic-evals>=1.0.0",
    "pyyaml>=6.0",
    "hypothesis>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
