[tool.poetry]
name = "catalog_build"
version = "2.2.0"
description = "The package provides modules that can be used to run scripts to manage the catalog and schema; it may be desirable to set up shortcuts for running these."
authors = ["Your Name <XXX@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "catalog_build" }
]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "2.3.1"
requests = "2.32.4"
PyYAML = "6.0.2"
beautifulsoup4 = "4.13.4"
lxml = "6.0.0"

[tool.poetry.urls]
Repository = "https://github.com/galaxyproject/brc-analytics/tree/main/catalog/py_package"
Documentation = "https://github.com/galaxyproject/brc-analytics/tree/main/catalog/py_package/README.md"
Issues = "https://github.com/galaxyproject/brc-analytics/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"